[gd_scene load_steps=8 format=3 uid="uid://cdl2mibmu1617"]

[ext_resource type="Script" path="res://Scripts/Giant_prismatic_poop.gd" id="1_e6yfg"]
[ext_resource type="Texture2D" uid="uid://bwe1uq2bjbxfd" path="res://Sprites/Currently Used/Prismatic_Poop_Upscaled-Sheet.png" id="2_bmkqm"]
[ext_resource type="AudioStream" uid="uid://cy3xguatueg1x" path="res://Sounds/Sounds Effects/Giant Prismatic click - Made with Clipchamp.wav" id="3_hsgmt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kx4wg"]
radius = 209.637
height = 927.43

[sub_resource type="Animation" id="Animation_nyfw5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("giant_prismatic_poop_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nvoqh"]
resource_name = "giant_prismatic_animation"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("giant_prismatic_poop_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yh2y"]
_data = {
"RESET": SubResource("Animation_nyfw5"),
"giant_prismatic_animation": SubResource("Animation_nvoqh")
}

[node name="giant_prismatic_poop" type="Node2D"]

[node name="Giant_prismatic_poop" type="CharacterBody2D" parent="."]
z_index = 1
scale = Vector2(1.26802, 1.30385)
collision_layer = 8
input_pickable = true
script = ExtResource("1_e6yfg")

[node name="giant_prismatic_poop_sprite" type="Sprite2D" parent="Giant_prismatic_poop"]
position = Vector2(-904.561, 631.973)
scale = Vector2(3, 2.836)
texture = ExtResource("2_bmkqm")
hframes = 7

[node name="giant_poop_collision" type="CollisionShape2D" parent="Giant_prismatic_poop"]
position = Vector2(-902.194, 630.441)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_kx4wg")

[node name="crush_1" type="AudioStreamPlayer" parent="Giant_prismatic_poop"]
stream = ExtResource("3_hsgmt")
volume_db = -5.0
pitch_scale = 1.5
bus = &"sfx"

[node name="decay_timer" type="Timer" parent="Giant_prismatic_poop"]
wait_time = 1800.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Giant_prismatic_poop"]
libraries = {
"": SubResource("AnimationLibrary_4yh2y")
}

[connection signal="input_event" from="Giant_prismatic_poop" to="Giant_prismatic_poop" method="_on_input_event"]
[connection signal="mouse_entered" from="Giant_prismatic_poop" to="Giant_prismatic_poop" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Giant_prismatic_poop" to="Giant_prismatic_poop" method="_on_mouse_exited"]
[connection signal="timeout" from="Giant_prismatic_poop/decay_timer" to="Giant_prismatic_poop" method="_on_decay_timer_timeout"]
